<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="description_next">Select next question</string>
    <string name="description_previous">Select previous question</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">ake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="cheat_count">Left cheat count is %1$d</string>
</resources>
